styles/index.scss
a {
  text-decoration: none !important;
}

html {
  overflow-y: auto
}

.stick-left {
  position: sticky;
  left: 0;
  z-index: 1;
  background: white;
  border-left: 1px solid rgba(0, 0, 0, 0.12);
  border-right: 1px solid rgba(0, 0, 0, 0.12);
}

.ct-label {
  color: inherit
}

